<resources>
    <string name="app_name">Weather App</string>
    <string name="searchLabel">Enter one of the following search keys</string>
    <string name="editTextCity">Enter a city or </string>
    <string name="editTextZip">Enter a zip code or </string>
    <string name="editTextLat">Latitude  and</string>
    <string name="editTextLong">Longitude</string>
    <string name="textViewMinTem">Low: </string>
    <string name="textViewMaxTem">High: </string>
    <string name="textViewHumidity">Humidity: </string>
    <string name="api_key">2a44f430cc82ca859268585a358d672e</string>
    <string name="web_service_url">http://api.openweatherapp.org/data/2.5/forecast/daily?q=</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="weather_condition_image">A graphical representation of the weather conditions</string>
    <string name="high_temp">High: %s</string>
    <string name="low_temp">Low: %s</string>
    <string name="day_description">%1$s: %2$s</string>
    <string name="humidity">Humidity: %s</string>
    <string name="hint_text">Enter city (e.g. Boston, MA, US)</string>
    <string name="read_error">Unable to read weather data</string>
    <string name="connect_error">Unable to connect to OpenWeatherApp.org</string>
</resources>
