<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivityController"
    tools:showIn="@layout/activity_main_view">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchLabel"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCity"
        android:hint="@string/editTextCity"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextZip"
        android:hint="@string/editTextZip"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextLat"
                       android:hint="@string/editTextLat"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextLong"
                       android:hint="@string/editTextLong"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_menu_search" />
    </LinearLayout>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/conditionImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         ></ImageView>
        <GridLayout
           android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_row="0"
                android:layout_column="0"
                android:id="@+id/dayTextView"
                android:textSize="16sp"
                android:text=" "/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:id="@+id/dayTempTextView"
                android:text=" " />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:id="@+id/weatherTextView"/>
            <TextView android:layout_column="0"
                android:layout_row="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewMinTem"
                android:id="@+id/lowTempTextView"/>
            <TextView android:layout_column="1"
                android:layout_row="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/highTempTextView"
                android:text="@string/textViewMaxTem"/>
            <TextView android:layout_column="2"
                android:layout_row="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/humidityTextView"
                android:text="@string/textViewHumidity"/>
        </GridLayout>
</LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>